--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@ permalink:        pretty
 
 # Setup
 title:            Tyler Tringas
-tagline:          'A Jekyll theme'
-description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:              http://hyde.getpoole.com
+tagline:          'A Blog for Humans'
+description:      'Traveling, building, learning.'
+url:              http://www.tylertringas.com
 
 author:
-  name:           'Mark Otto'
-  url:            https://twitter.com/mdo
+  name:           'Tyler Tringas'
+  url:            https://www.tylertringas.com
 
 paginate:         5
 
